# auth_pkg_drf

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
drf_auth_package/: __init__.py  apps.py  authentication.py  conf.py  models.py  permissions.py  serializers.py  urls.py  views.py
drf_auth_package/management/: __init__.py
drf_auth_package/migrations/: __init__.py
drf_auth_package/services/: __init__.py  jwt_service.py  oauth_service.py  phone_service.py  session_service.py
drf_auth_package/utils/: __init__.py  tokens.py  validators.py
examples/demo_project/: .env.example  README.md  requirements.txt
examples/demo_project/demo_project/: settings.py  urls.py
tests/: __init__.py  settings.py  test_auth_flow.py  urls.py
